2008-05-10  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Print usage when no URL is specifed or bad command-line option is
	specified.
	* src/HelpItemFactory.cc
	* src/help_tags.h
	* src/option_processing.cc

2008-05-10  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Removed duplicate log message.
	* src/AbstractCommand.cc (asyncResolveHostname)

2008-05-10  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Updated man page: --async-dns and --ftp-reuse-connection were added.
	Changed -j option's default value from 5 to 1.
	Added new examples using protocol auto detection feature.
	Removed -T, -M usage where it can be omitted.
	* doc/aria2c.1.txt
	* doc/aria2c.1.html
	* doc/aria2c.1.txt

2008-05-10  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Updated command-line usage text, so that it tells users that they
	can specify any number of torrent files and metalink files in
	command-line.
	* src/version_usage.cc

2008-05-09  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Changed the default value of -j option to 1.
	* src/HelpItemFactory.cc
	* src/option_processing.cc
	* src/usage_text.h

2008-05-09  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Added the ability to reuse connection in FTP and it is enabled by
	default. It can be disabled by --ftp-reuse-connection=false option.
	* src/Command.cc
	* src/DownloadCommand.cc
	* src/FtpDownloadCommand.cc
	* src/FtpDownloadCommand.h
	* src/FtpFinishDownloadCommand.cc
	* src/FtpFinishDownloadCommand.h
	* src/FtpInitiateConnectionCommand.cc
	* src/FtpNegotiationCommand.cc
	* src/FtpNegotiationCommand.h
	* src/HelpItemFactory.cc
	* src/Makefile.am
	* src/Makefile.in
	* src/OptionHandlerFactory.cc
	* src/option_processing.cc
	* src/prefs.h
	* src/usage_text.h

2008-05-09  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Call Command::transitStatus() before calling Command::execute(),
	so that the status change made in execute() is not cleared.
	* src/DownloadEngine.cc
